// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should handle home clicked 1`] = `
<Breadcrumb
  aria-label="breadcrumb"
  className="integr8ly-breadcrumb"
>
  <BreadcrumbItem
    className="integr8ly-breadcrumb-home"
    component="a"
    isActive={false}
    onClick={[Function]}
    target={null}
    to={null}
  >
    <Icon
      className="fa-lg"
      name="home"
      type="fa"
    />
  </BreadcrumbItem>
  <BreadcrumbItem
    className=""
    component="a"
    isActive={false}
    target={null}
    to="/tutorial/1"
  >
    Unit Test Walkthrough
  </BreadcrumbItem>
  <BreadcrumbItem
    className=""
    component="a"
    isActive={true}
    target={null}
    to={null}
  >
    Task 1 of 3
  </BreadcrumbItem>
</Breadcrumb>
`;

exports[`Breadcrumb component should render breadcrumb with props 1`] = `
<Breadcrumb
  aria-label="breadcrumb"
  className="integr8ly-breadcrumb"
>
  <BreadcrumbItem
    className="integr8ly-breadcrumb-home"
    component="a"
    isActive={false}
    onClick={[Function]}
    target={null}
    to={null}
  >
    <Icon
      className="fa-lg"
      name="home"
      type="fa"
    />
  </BreadcrumbItem>
  <BreadcrumbItem
    className=""
    component="a"
    isActive={false}
    target={null}
    to="/tutorial/1"
  >
    Unit Test Walkthrough
  </BreadcrumbItem>
  <BreadcrumbItem
    className=""
    component="a"
    isActive={true}
    target={null}
    to={null}
  >
    Task 1 of 3
  </BreadcrumbItem>
</Breadcrumb>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
<Breadcrumb
  aria-label="breadcrumb"
  className="integr8ly-breadcrumb"
>
  <BreadcrumbItem
    className="integr8ly-breadcrumb-home"
    component="a"
    isActive={false}
    onClick={[Function]}
    target={null}
    to={null}
  >
    <Icon
      className="fa-lg"
      name="home"
      type="fa"
    />
  </BreadcrumbItem>
</Breadcrumb>
`;
